VectorBench: improvements